--- a/Views/Introduccion/Introduccion.cshtml
+++ b/Views/Introduccion/Introduccion.cshtml
@@ -9,7 +9,7 @@
 
 <section>
     <div class="card p-3 d-flex justify-content-center align-items-center">
-        <h2 class="text-center text-light">Sistema de Vales Combustible</h2>
+        <h2 class="text-center text-light">Sistema de Vales de Combustible</h2>
     </div>
 </section>
 <style>
