--- a/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml
+++ b/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml
@@ -447,7 +447,7 @@
                                     success: function (mensaje) {
                                         _this.DataCompany();
                                         mensaje = mensaje[0]
-                                        $._combustible.alert("success", "Actualizacion exitosa", mensaje.resultado)
+                                        $._combustible.alert("success", "Actualización exitosa", mensaje.resultado)
                                         _this.GuardarDataLocalStorage()
                                     },
                                     error: function (xhr, status, error) {
