--- a/Views/rpValesCombustible/columbar1.cshtml
+++ b/Views/rpValesCombustible/columbar1.cshtml
@@ -43,8 +43,8 @@
                     datachart = _.sortBy(datachart, 'y');
                 }
                 
-                console.log(xAxisArr)
-                console.log(datachart)
+                @*console.log(xAxisArr)
+                console.log(datachart)*@
 
                 datachart = datachart.slice(0, 10); 
 
