--- a/Views/rpValesCombustible/gridDetalleModal.cshtml
+++ b/Views/rpValesCombustible/gridDetalleModal.cshtml
@@ -61,7 +61,7 @@
                     selectable: "single, row",
                     change: function (e) {
                         let datos = e !== null ? e.sender.dataItem(e.sender.select()) : null;;
-                        console.log(datos);
+                        @*console.log(datos);*@
                         // Grid_viajeSolicitado_dataitem =
                     },
                     dataBound: function () {
