--- a/Views/rpValesCombustible/mapa.cshtml
+++ b/Views/rpValesCombustible/mapa.cshtml
@@ -116,7 +116,7 @@
                         break;
                     }
                 }
-                console.log(datos)
+                @*console.log(datos)*@
                 _this.modal();
 
                 $.LoadAPI().then(() => {
@@ -187,7 +187,7 @@
                 /*------*/
             },
             setPoint: function (latlng, d) {
-                console.log(d);
+                @*console.log(d);*@
                 let _this = this;
 
                 let mk = new google.maps.Marker({
