--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -54,7 +54,7 @@
                                     </div>
 
                                     <form>
-                                        <p class="text-center">Inicio de cesión</p>
+                                        <p class="text-center">Inicio de Sesión</p>
 
                                         <div class="form-outline mb-4">
                                             <label class="form-label" for="form2Example11">Nombre de usuario</label>
@@ -82,9 +82,9 @@
 
                                         <div class="d-grid gap-2 col-lg-6 mx-auto">
                                             <button class="btn btn-light gradient-custom-2" type="button" id="login">
-                                                Iniciar cesión
+                                                Iniciar Sesión
                                             </button>
-                                            <a class="text-muted" href="#!">Olvidesate tu contraseña?</a>
+                                            <a class="text-muted" href="#!">Olvidaste tu contraseña?</a>
                                         </div>
                                         <div id="Company_contacto" class="my-2 text-secondary">
 
@@ -93,7 +93,7 @@
 
                                         </div>
                                         <div class="d-flex align-items-center justify-content-center pb-4 mt-5">
-                                            <p class="mb-0 me-2">No tienes una empreasa?</p>
+                                            <p class="mb-0 me-2">No tienes una empresa?</p>
                                             <a class="btn btn-outline-danger" href="@Url.Action("adRegistarCompany", "adRegistarCompany")">Crear nueva</a>
                                         </div>
 
@@ -197,10 +197,10 @@
                     $("#Company_logo").attr("src", '@Url.Content("~/")'+ DataCompany.compamyLogo);
                     $("#Company_name").text(DataCompany.companyName);
                     $("#Company_contacto").html("")
-                    $("#Company_contacto").html('<i class="bi bi-telephone" > </i>' + ' Telefono: ' + DataCompany.cotancto);
+                    $("#Company_contacto").html('<i class="bi bi-telephone" > </i>' + ' Teléfono: ' + DataCompany.cotancto);
 
                     $("#Company_Direccion").html("")
-                    $("#Company_Direccion").html('<i class="bi bi-buildings"></i>' + ' Direccion: ' + DataCompany.direccion);
+                    $("#Company_Direccion").html('<i class="bi bi-buildings"></i>' + ' Dirección: ' + DataCompany.direccion);
                 }
 
             },
@@ -217,28 +217,6 @@
     })();
 
     
-
-    /*function () {
-                $.get("Login/login", { username: $("#username").val(), password: $("#password").val() }, function (data) {
-                    if (data.estado == 1) {
-                        location.href = "Home"
-                    } else if (data.estado == 0) {
-                        location.href = "Login"
-                        alert("Usuario inactico, solcite que lo active")
-                    } else {
-                        //console.log(data);
-                        alert("Usuario y o contraseña incorrectos")
-                    }
-                });
-            }, prueba: function () {
-
-                console.log("Estas bien maje")
-                $("#login").on('click', function (event) {
-
-                    console.log("funciona, apurate pendejo XD");
-                });
-            }*/
-
 
 
     /*$("#login").on('click', function (event) {
