--- a/Views/adUsuariosVehiculos/adUsuariosVehiculos.cshtml
+++ b/Views/adUsuariosVehiculos/adUsuariosVehiculos.cshtml
@@ -10,7 +10,7 @@
 <section>
     <div class="container-fluid card mt-1 mt-lg-0">
         <div class="row mt-4">
-            <h2 class="text-center">Administración de vehiculos por usuario</h2>
+            <h2 class="text-center">Administración de vehículos por usuario</h2>
         </div>
         <div class="row">
             <div class="col-lg-12 px-5 pb-5 pt-2" >
@@ -69,7 +69,7 @@
     (function () {
         $.extend({
             ModuloAsignarVehiculos: {
-                arbol: {
+                arbol: {//Codigo sin usar, se elimino el arbol del modulo
                     crearArbol: function () {
                         $("#treeview").kendoTreeView();
                     },
@@ -99,11 +99,11 @@
                 },
                 Grid: {
                     dataItem: [],
-                    GridUsers: function () {
+                    GridUsers: function () {//Función para inicializar el GRID de los usuarios
                         var _this = this;
 
-                        $("#@{@GRID_Users}").html("");
-                        $("#@{@GRID_Users}").kendoGrid({
+                        $("#@{@GRID_Users}").html("");//Se limpía el contenedor del GRID
+                        $("#@{@GRID_Users}").kendoGrid({//Se inicializa el GRID
                             dataSource: {
                                 pageSize: 10
                             },
@@ -131,7 +131,7 @@
                                 },                          
                                 {
                                     field: "telefono",
-                                    title: "Telefono",
+                                    title: "Teléfono",
                                     width: "100px"
                                 }, 
                                 {
@@ -147,10 +147,13 @@
                             detailInit: _this.GridVehiculo,
                             detailCollapse: function (e) {
                                 var detailRow = e.detailRow;
-                                $(detailRow).remove();
+                                $(detailRow).remove();//Se elimina la data del Grid hijo
+
+                                /*Nota: Se elimina la data cada vez que se muestra el subgrid, para poder mostrar la data mas reciente*/
                             },
                             selectable: "single, row",
                             change: function (e) {
+                                //Se almacena la data de la fila a la que se le dio doble clic 
                                 _this.dataItem = e !== null ? e.sender.dataItem(e.sender.select()) : null;
 
                             },
@@ -161,19 +164,22 @@
                                     _this.modal.dataModal(_this.dataItem.username);
                                     _this.modal.username = _this.dataItem.username;
                                 });*/
+
+                                //Función para mostrar el modal al dar doble clic
                                 $("#@{@GRID_Users} .k-grid-content tbody tr:not(.k-grouping-row)").on("click", function () {
-                                    if (((new Date().getTime()) - touchtime) < 500) {
-                                        _this.modal.show();
-                                        _this.modal.dataModal(_this.dataItem.username);
-                                        _this.modal.username = _this.dataItem.username;
+                                    if (((new Date().getTime()) - touchtime) < 500) {//Se establece el tiempo del doble click o doble touch
+                                        _this.modal.show();//Se muestra el modal
+                                        _this.modal.dataModal(_this.dataItem.username);//Se llama a al función de la data del modal
+                                        _this.modal.username = _this.dataItem.username;//Se Guarda el username al que se le dio doble clic 
                                     } touchtime = new Date().getTime();
                                 });
                             
                             }
                         });
+                        //Se muestra el mensaje para doble clic 
                         $(".k-pager-wrap").append("<span class='w-100 text-center d-none d-lg-block'>Presione doble click para modificar la información</span>")
                     },
-                    dataGrid: function () {
+                    dataGrid: function () {//Función para obtener la data del GRID usuarios
                         $.get('@Url.Action("UserXcompany", "AdUsuariosVehiculos")', function (users) {
                             //console.log(users)
                             $("#@{@GRID_Users}").data("kendoGrid").dataSource.data(users);
@@ -181,24 +187,29 @@
                     },
                     modal:{
                         username: "",
-                        show: function () {
+                        show: function () {//Función para mostrar el modal de los usuarios
                             $("#@{@ModalAsignarVehiculos}").modal('show');
                         },
-                        dataModal: function (_username) {
+                        dataModal: function (_username) {//Función para mostrar la data en el modal
                             var _this = this;
                             $.get('@Url.Action("obtenerObtenerMobileAsigandosXUser", "AdUsuariosVehiculos")', { username: _username }, function (mobiles) {
                                 //console.log(mobiles)
                                 //createDualListboxMobile(mobiles)
+
+                                //Se llama a la función que crea las cartas con los vehiculos
                                 $.Cartas_ModuloAsignarVehiculos.cartas.cargarCartas(mobiles)
                                 @*console.log("Vista Principal : "+"@{@GRID_Users}")*@
                             });
 
+                            //Se elimina el nombre del usuario al que se le edita el usuario
                             $("#@{@TXT_Username_ModalAsignarVehiculos}").html("")
                             //$("#exampleModalLabel").append("<span > <img src='"'@Url.Action("~/")'+"images/user.gif'/> " + _username + "</span>")
+
+                            //Se muestra el nuevo usuario
                             $("#@{@TXT_Username_ModalAsignarVehiculos}").append("<span><img src='" + '@Url.Content("~/images/user.gif")' + "'/> " + _username + "</span>");
 
                         }, 
-                        BTN_ActualizarMobiles: function () { 
+                        BTN_ActualizarMobiles: function () {//Función para actulizar los vehiculos por usuario
                             var _this = this; 
                             $("#@{@BTN_Guardar_ModalAsignarVehiculos}").on("click", function () {
                                 /*selects = $("#vocupados >")
@@ -209,16 +220,18 @@
                                     valores.push($(this).val());
                                 });*/
 
+                                //Se obtienen las cartas del contenedor 
                                 selects = $("#@{@Contenedor_Asignados_ModalAsignarVehiculos} > .carta h2")
                                 var valores = [];
 
+                                //Se guardan solamenten los que tienen el atributo value
                                 selects.each(function () {
                                     valores.push($(this).attr("value"));
                                 });
 
                                 var arg = {
-                                    mobilesid: valores.join(","),
-                                    Username: _this.username
+                                    mobilesid: valores.join(","),// Se obtienen los mobiles asigandos por usuario
+                                    Username: _this.username// Se obtiene el usuario
                                 }
 
                                 $.get('@Url.Action("ActulizarMobileXUser", "AdUsuariosVehiculos")', arg , function (resultado) {
@@ -230,7 +243,7 @@
                             });
                         }                 
                     },
-                    GridVehiculo: function (e) {
+                    GridVehiculo: function (e) {//Función para mostrar el Grid hijo con los vehiculos por usuario
                         var _username = e.data.username
                         var _this = this;
                     
@@ -251,20 +264,20 @@
                                     { field: "tipoCombustible", title: "Tipo de Combustible", width: "100px" }
 
                                 ],
-                                resizable: true
+                                resizable: true// Se activa que se pueda cambiar el ancho de una columna
 
                             });
                         });
                     }
                 },
-                alert: function (icon,title, text) {
+                alert: function (icon,title, text) {//Funcion para mostrar alertas
                     Swal.fire({
                         icon: icon,
                         title: title,
                         text: text,
                     });
                 },
-                init: function () {
+                init: function () {//Función para ejecutar las funciones que se ejecutan al abrir el modulo
                     var _this = this;
                     _this.Grid.GridUsers();
                     _this.Grid.dataGrid();
